fix button style on iOS

--- a/style.css
+++ b/style.css
@@ -256,6 +256,7 @@ textarea {
 
 /* Submit button */
 .contact input[type="submit"] {
+  -webkit-appearance: none;
   margin-top: 2em;
   align-self: center;
   border-radius: 10px;
